# geo-access-logger

./: .gitignore  README.md  main-old.py  main.py  pyproject.toml  requirements.txt  variaveis.py
.streamlit/: example_secrets.toml  secrets.toml
